# potok_tabular

./: README.md  pyproject.toml
models/: main.py
potok/core/: ApplyToDataDict.py  Data.py  Layer.py  Node.py  Pipeline.py  __init__.py
potok/methods/: Bagging.py  Validation.py  __init__.py
potok/tabular/: Error.py  Folder.py  HyperOptimization.py  LightGBM.py  LinReg.py  Operators.py  TabularData.py  __init__.py  utils.py
tests/tabular/: test.py
