[tool.poetry]
name = "potok"
version = "0.1.0"
description = ""
authors = ["ksetherg"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
pandas = "^1.5.2"
sklearn = "^0.0.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
