[tool.poetry]
name = "potok"
version = "0.1.0"
description = ""
authors = ["ksetherg"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
pandas = "^1.5.2"
sklearn = "^0.0.post1"
wrapt = "^1.14.1"
lightgbm = "^3.3.3"
dill = "^0.3.6"
ax-platform = "^0.2.9"
category-encoders = "^2.5.1"
joblib = "^1.2.0"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
